# aerospace_chatbot

./: .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup_dependencies.sh
.github/: python-test.yml
.github/workflows/: python-test.yml
app/: Home.py  app.py
app/pages/: 1_Database_Processing.py  2_Chatbot.py  3_Visualize_Data.py
app/tls_certificate/: cert.pem
app/tools/: 0_Home.py  1_Database_Processing.py  2_Chatbot.py  3_Visualize_Data.py  Aerospace_Chatbot.py  Aerospace_Chatbot_Design_Criteria.py  Aerospace_Chatbot_Space_Mechanisms.py  Chatbot.py  Database_Processing.py  Visualize_Data.py
backend/models/: brains.py
config/: config.json  config_admin.json  config_tester.json  index_data.json  users.yml
data/AMS/: Index-latest-2021.xlsx  README.md  README.txt  ams_data-400-0-200.json  ams_data-400-0-50.json  ams_data-400-0.jsonl  ams_data-400-0_short.jsonl  ams_data.json  ams_data_short.jsonl  ams_data_tiny.jsonl  ams_data_train_Llama-2-7B-Chat-GGUF-100.csv  ams_data_train_Llama-2-7B-Chat-GGUF-LLM-generic-100.csv  ams_data_train_Llama-2-7B-Chat-GGUF-LLM-generic-100.jsonl  ams_data_train_Llama-2-7B-Chat-GGUF.jsonl
db/: archive_chromadb_mixedbread-ai-mxbai-embed-large-v1-ams-nomerge-400.pickle  archive_chromadb_text-embedding-3-large-ams-2merge-none.pickle  archive_chromadb_text-embedding-3-large-ams-nomerge-400-parent-child.pickle  archive_chromadb_text-embedding-3-large-ams-nomerge-400.pickle  archive_chromadb_text-embedding-3-small-ams-2merge-none.pickle  chroma.sqlite3
db/-queries/chromadb/: chroma.sqlite3
docs/: api.rst  conf.py  data_processing.rst  index.rst  modules.rst  prompts.rst
docs/source/: conf.py  index.rst  indices_and_tables.rst
docs/source/help/: configs.rst  dependencies.rst  deployments.rst  eval.rst  example.rst  functionality.rst  overview.rst  streamlit_apps.rst  user_guide.rst
docs/source/modules/: 1_Chatbot.rst  2_Database_Processing.rst  3_Data_Processing.rst  4_Visualize_Data.rst  Home.rst  admin.rst  api.rst  core.rst  data_processing.rst  package_modules.rst  processing.rst  prompts.rst  queries.rst  services.rst  streamlit.rst  test.rst  tests.rst  ui.rst
fine_tune_data/: train_data.csv  validation_data.csv
notebooks/: AMS_chatbot.ipynb  advanced_rag.ipynb  aws_bedrock.ipynb  batch.ipynb  databases.json  doc_management.ipynb  doc_ocr.ipynb  download_pdf_content.ipynb  eval_models.json  langchain_qa.ipynb  langgraph.ipynb  make_databases.ipynb  make_databases_minimal.ipynb  pdf_langchain_AMS.ipynb  pdf_processing.ipynb  playground.ipynb  playground_advanced_rag.ipynb  playground_calcs.ipynb  playground_pc.ipynb  quivr_hack.ipynb  ragas_assessment.ipynb  spotlight-layout.json  test_cases.json  testset.csv  upload_pdfs.ipynb  upload_pdfs_supabase.ipynb
notebooks/backend/: quivr_hack.ipynb
scripts/: 00_canopy_data_prep.ipynb  AMS_chatbot.ipynb  Start.py  app.py  canopy.ipynb  clusters.ipynb  config.json  data_import.py  fine_tuning_data.ipynb  finetuning_colab_medium.ipynb  finetuning_colab_medium_example.ipynb  gen_training_data.py  index_data.json  langchain_qa.ipynb  main.py  main_pretty.py  make_qa_pairs.ipynb  playground.ipynb  prompts.py  queries.py  requirements.txt  setup.py  setup_page.py  setup_page_canopy.py  setup_page_langchain.py  train_llm.ipynb  train_llm.py  upload_pdfs.ipynb
scripts/pages/: 1_Chatbot_AMS_Modular.py  2_Document_Upload.py  3_Visualize_Data.py  4_Clean_and_Question.py
scripts/quivr_hack/backend/: upload_pdfs_supabase.ipynb
src/: Home.py  admin.py  data_import.py  data_processing.py  prompts.py  queries.py  setup.py
src/aerospace_chatbot/: Home.py  __init__.py  admin.py  data_processing.py  eval.py  prompts.py  queries.py  test_admin.py
src/aerospace_chatbot/core/: __init__.py  cache.py  config.py  logging_config.py
src/aerospace_chatbot/pages/: 1_Chatbot.py  1_Database_Processing.py  2_Chatbot.py  (+2 more)
src/pages/: 1_Chatbot.py  2_Database_Processing.py  2_Document_Upload.py  3_Data_Processing.py  3_Visualize_Data.py  4_Data Processing.py  4_Visualize_Data.py  5_Visualize_Data.py
tests/: test-visualization-viz.pkl  test.py  test_backend.py  test_cases.json  test_chatbot.py  test_data_processing.py  test_frontend.py
training/: train_llm_autotrain.ipynb
training/my-llm/: training_params.json
(+24 files in other folders)
