[tool.poetry]
name = "aerospace-chatbot"
version = "0.0.8.4"
description = "Aerospace engineering chatbot and AI tools."
authors = ["dsmueller <dsm@danmueller.pro>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dan-s-mueller/aerospace_chatbot/tree/main"
repository = "https://github.com/dan-s-mueller/aerospace_chatbot/tree/main"

[tool.poetry.dependencies]
python = ">3.9.7,<3.12"
python-dotenv = "^1.0.0"
ipywidgets = "^8.1.1"
watchdog = "^3.0.0"
jsonlines = "^4.0.0"
pypdf = "^3.17.4"
tenacity = "^8.2.3"
sentence-transformers = "^2.2.2"
nbformat = "^5.9.2"
pydantic = "^2.6.0"
pytest = "^8.1.1"
ipykernel = "^6.29.3"
streamlit = "^1.38.0"
chromadb = "^0.5.0"
pinecone-client = {version = "<5.0.1", extras = ["grpc"]}
ragatouille = "^0.0.8.post4"
huggingface-hub = "^0.24.6"
openai = "^1.43.1"
langchain = "^0.2.16"
langchain-core = "^0.2.38"
langchainhub = "^0.1.21"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-voyageai = "^0.1.1"
langchain-pinecone = "^0.1.3"
ragas = "^0.1.16"
renumics-spotlight = "^1.6.11"
sphinxawesome-theme = "^5.1.1"
sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"
sphinx-design = "^0.5.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"