[tool.poetry]
name = "aerospace-chatbot"
version = "0.0.9.3"
description = "Aerospace engineering chatbot and AI tools."
authors = ["dsmueller <dsm@danmueller.pro>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dan-s-mueller/aerospace_chatbot/tree/main"
repository = "https://github.com/dan-s-mueller/aerospace_chatbot/tree/main"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
numpy = ">=1.21,<1.25"
python-dotenv = "^1.0.0"
ipywidgets = "^8.1.1"
tenacity = "^8.2.3"
requests = "^2.32.3"
pytest = "^8.1.1"
ipykernel = "^6.29.3"
streamlit = "^1.38.0"
chromadb = "^0.5.0"
ragatouille = "^0.0.8.post4"
pinecone-client = "^5.0.1"
pinecone = {extras = ["grpc"], version = "^5.3.1"}
huggingface-hub = "^0.24.6"
openai = "^1.43.1"
langchain = "^0.3.7"
langchain-core = "^0.3.15"
langchain-anthropic = "^0.2.4"
langchainhub = "^0.1.21"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
langchain-voyageai = "^0.1.1"
langchain-chroma = "^0.1.4"
langchain-pinecone = "^0.2.0"
ragas = "^0.1.16"
sphinxawesome-theme = "^5.1.1"
sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"
sphinx-design = "^0.5.0"
google-cloud-storage = "^2.18.2"
pymupdf = "^1.24.13"
unstructured = {extras = ["pdf"], version = "^0.16.11"}
unstructured-client = "^0.28.1"
pypdf = "^5.1.0"
langgraph = "^0.2.60"
cohere = "^5.13.4"
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"